frontend_tests/negative/missing_main/go.mod
module example.com/renvotests/negative/missing_main

go 1.25
